# knowledge-qa

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  init.sh  nginx.conf  pyproject.toml  start_cli.py  start_web.py  test_langsmith_tracing.py  test_reader_detailed.py
.cursor/rules/: action-rule.mdc  git-rule.mdc  project-rule.mdc  test-rule.mdc
.github/workflows/: ci.yml
examples/: Player's Handbook.md  三国演义.txt  三国演义_部分测试.txt  凡人修仙传test.txt  报告_1页.docx  简历_3页.md
src/knowledge_qa/: agent.py  app.py  cli.py  config.py  file_parser.py  llm.py  log_manager.py  memory.py  text_processor.py  vector_store.py
src/knowledge_qa/llms/: __init__.py  finished_llm.py  init.py  qa_llm.py  reader_llm.py  refine_llm.py  verify_llm.py
