[project]
name = "knowledge-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2txt>=0.9",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "markdown>=3.9",
    "pydantic-settings>=2.11.0",
    "unstructured>=0.18.15",
]
