[project]
name = "knowledge-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2txt>=0.9",
    "faiss-cpu>=1.12.0",
    "httpx[socks]>=0.28.1",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-openai>=0.3.35",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=0.2.0",
    "loguru>=0.7.3",
    "markdown>=3.9",
    "pydantic-settings>=2.11.0",
    "rich>=14.2.0",
    "streamlit>=1.50.0",
    "unstructured>=0.18.15",
]
